--- a/history
+++ b/history
@@ -1,9 +1,3 @@
-Archer (2009) 5x09 Archer Vice: On The Carpet 720p
-Archer (2009) 5x10 Archer Vice: Palace Intrigue (1)
-Archer (2009) 5x11 Archer Vice: Palace Intrigue (2)
-Archer (2009) 5x12 Archer Vice: Filibuster
-Archer (2009) 5x13 Archer Vice: Arrivals/Departures
-
 The Big Bang Theory 8x05 The Focus Attenuation
 The Big Bang Theory 8x06 The Expedition Approximation
 The Big Bang Theory 8x07 The Misinterpretation Agitation
@@ -14,8 +8,17 @@ The Big Bang Theory 8x11 The Clean Room Infiltration
 The Big Bang Theory 8x12 The Space Probe Disintegration
 The Big Bang Theory 8x13 The Anxiety Optimization
 The Big Bang Theory 8x14 The Troll Manifestation
+Archer (2009) 5x09 Archer Vice: On The Carpet 720p
+Archer (2009) 5x10 Archer Vice: Palace Intrigue (1)
+Archer (2009) 5x11 Archer Vice: Palace Intrigue (2)
+Archer (2009) 5x12 Archer Vice: Filibuster
+Archer (2009) 5x13 Archer Vice: Arrivals/Departures
 Archer (2009) 6x01 The Holdout
 Archer (2009) 6x02 Three to Tango
 Archer (2009) 6x03 The Archer Sanction
 Archer (2009) 6x04 Edie's Wedding
+Better Call Saul 1x01
+Better Call Saul 1x02
+
+The Big Bang Theory 8x05 The Focus Attenuation
 Archer (2009) 6x05 Vision Quest
